# buddyhub

./: AGENTS.md  PRD.md  README.md  README.zh-CN.md  TESTING.md  buddyhub  buddyhub_bridge.py  buddyhub_core.py  buddyhub_tui.py  package.json  pyproject.toml
.claude-plugin/: marketplace.json
Formula/: buddyhub.rb
V0.1/: PRD.md  README.md
V0.1/specs/: 01-buddy-state-spec.md  02-buddy-ui-spec.md  03-buddy-lifecycle-and-safety-spec.md  04-command-surface-spec.md  README.md
V0.2/: PRD.md  README.md  SPEC-STATUS.md
V0.2/specs/: 01-customization-model-spec.md  02-tui-menu-and-preview-spec.md  03-platform-detection-and-setup-spec.md  04-apply-restore-and-uninstall-spec.md  05-install-and-distribution-spec.md  README.md
ink/: buddyhub-ink-dev.mjs
plugins/: __init__.py
plugins/buddyhub/: README.md  __init__.py
plugins/buddyhub/.claude-plugin/: plugin.json
plugins/buddyhub/commands/: apply.md  clear-color.md  clear-nickname.md  color-black.md  color-blue.md  color-green.md  color-orange.md  color-pink.md  color-purple.md  color-red.md  color.md  disable.md  doctor.md  help.md  inspect.md  nickname.md  open.md  pause.md  pet-install.md  restore.md  resume.md  settings.md  status.md  statusline-off.md  statusline-on.md  uninstall.md
plugins/buddyhub/hooks/: hooks.json
research/: README.md  any-buddy-reference.md  claude-code-buddy.md  claude-code-settings-and-buddy-customization.md  ink-reference.md  recon-reference.md
specs/: 01-buddy-state-spec.md  02-buddy-ui-spec.md  03-buddy-lifecycle-and-safety-spec.md  04-command-surface-spec.md  README.md
(+7 files in other folders)
